# canpoli-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  serverless.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260122_224212_c952b21da691_initial_schema.py  20260122_233257_6f626f339675_add_indexes_party_name_riding_name.py  20260206_121500_9b7a2d7f2c3a_add_riding_geom_postgis.py  20260207_091500_1b2c3d4e5f6a_add_riding_name_province_index.py  20260207_120000_a1b2c3d4e5f6_add_billing_and_api_keys.py  20260207_150000_b7c8d9e0f123_add_parliamentary_tables.py
api/civic_context/: config.py  handler.py  logging_config.py  main.py
api/tests/: conftest.py  test_cache.py  test_civic.py  test_health.py  test_houseofcommons.py  test_openparliament.py  test_represent.py
canpoli/: __init__.py  api_keys.py  app.py  auth.py  config.py  database.py  exceptions.py  lambda_handler.py  lambda_ingest.py  logging_config.py  main.py  rate_limit.py  redis_client.py  sentry.py  stripe_client.py
canpoli/cli/: __init__.py  ingest.py  ingest_boundaries.py  ingest_parliament.py
canpoli/models/: __init__.py  api_key.py  base.py  bill.py  billing.py  debate.py  debate_intervention.py  geometry.py  house_officer_expenditure.py  member_expenditure.py  party.py  party_standing.py  petition.py  representative.py  representative_role.py  riding.py  user.py  vote.py  vote_member.py
canpoli/repositories/: __init__.py  api_key_repo.py  base.py  bill_repo.py  billing_repo.py  debate_intervention_repo.py  debate_repo.py  house_officer_expenditure_repo.py  member_expenditure_repo.py  party_repo.py  party_standing_repo.py  petition_repo.py  representative_repo.py  representative_role_repo.py  riding_repo.py  user_repo.py  vote_member_repo.py  vote_repo.py
canpoli/schemas/: base.py  (+13 more)
docs/: architecture.md  configuration.md  deployment.md  development.md  ingestion.md
scripts/: tag_network_resources.sh
tests/: __init__.py  conftest.py  test_api_key_service.py  test_api_keys.py  test_app_factory.py  test_auth.py  test_billing_service.py  test_boundaries_ingest.py  test_cli_ingest.py  test_exceptions.py  test_health.py  test_hoc_ingestion.py  test_ingest_boundaries_utils.py  test_parties.py  test_postgis_lookup.py  test_rate_limit.py  test_redis_client.py  test_representatives.py  test_ridings.py  test_sentry.py  test_stripe_client.py
(+27 files in other folders)
