[project]
name = "canpoli-api"
version = "0.1.0"
description = "Canadian Political Data API"
authors = [
    {name = "BradleyExton"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "slowapi (>=0.1.9)",
    "mangum (>=0.17.0,<0.18.0)",
    "stripe (>=14.0.0,<15.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "PyJWT[crypto] (>=2.9.0,<3.0.0)",
    "sentry-sdk (>=2.51.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
